# homework

Algorithms/HW1/Task01/: CMakeLists.txt  list.h  main.cpp  release.cpp
Algorithms/HW1/Task02/: main.cpp
Algorithms/HW1/Task03/: CMakeLists.txt  main.cpp
Algorithms/HW1/Task04/: CMakeLists.txt  main.cpp
Algorithms/HW1/Task05/: main.cpp
Algorithms/HW1/TaskA/: CMakeLists.txt  P1.docx  main.cpp
Algorithms/HW1/TaskA5/: CMakeLists.txt  main.cpp
Algorithms/HW1/TaskB/: CMakeLists.txt  main.cpp
Algorithms/HW2/A1/: CMakeLists.txt  main.cpp
cpp/HW5/Task01/: CMakeLists.txt  IShape.h  circle.h  functions.h  geometry_main.cpp  line.h  point.h  polygon.h  ray.h  segment.h  vector.h
cpp/HW5/Task01/src/: circle.cpp  functions.cpp  line.cpp  point.cpp  polygon.cpp  ray.cpp  segment.cpp  vector.cpp
cpp/HW6/: CMakeLists.txt  main.cpp
cpp/Task01/: CMakeLists.txt  rational.cpp  rational.h
cpp/Task02/: CMakeLists.txt  StringView.cpp  StringView.h
csharp/HW1/: HW1.sln
csharp/HW4/: HW4.sln  Menu.cs  Program.cs
csharp/HW5/: HW5.csproj  HW5.sln  Program.cs
csharp/HW6/: HW6.sln  Program.cs
matlab/: IbragimovTimur.m  IbragimovTimur3.m  IbragimovTimur4.m  IbragimovTimur_MA_sem2.m
matlab/a/: IbragimovTimurAsem5.m  IbragimovTimurAsem6.m  IbragimovTimurAsem7.m  IbragimovTimurTest.m
matlab/ma/: Ibragimov_Timur.m  Ibragimov_Timur3.m  Ibragimov_Timur4.m
test/: 1.py
авс/HW2/: riscv1.asm
авс/HW3/: riscv1.asm  Отчет.docx
авс/HW4/: riscv1.asm
авс/HW5/: HW5.asm  riscv1.asm
авс/IHW1/: README  README.md  input.asm  macros.asm  main.asm  riscv1.asm  tests.asm
(+96 files in other folders)
